--- a/samples/Plugin.Maui.Feature.Sample/AppShell.xaml
+++ b/samples/Plugin.Maui.Feature.Sample/AppShell.xaml
@@ -6,8 +6,6 @@
     xmlns:pages="clr-namespace:Plugin.Maui.Feature.Sample"
     Shell.FlyoutBehavior="Disabled">
 
-    <ShellContent
-        Title="Feature Plugin"
-        ContentTemplate="{DataTemplate pages:MainPage}" />
+    <ShellContent Title="Feature Plugin" ContentTemplate="{DataTemplate pages:MainPage}" />
 
 </Shell>
