--- a/samples/Plugin.Maui.Workarounds.MacCatalyst.Sample/MainPage.xaml
+++ b/samples/Plugin.Maui.Workarounds.MacCatalyst.Sample/MainPage.xaml
@@ -3,7 +3,7 @@
     x:Class="Plugin.Maui.Workarounds.MacCatalyst.Sample.MainPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    Title="Feature Plugin">
+    Title="Mac Catalyst Workarounds">
 
-    <!--  Add something that makes sense for your plugin here  -->
+    <Rectangle BackgroundColor="Red" WidthRequest="1920" HeightRequest="1080" />
 </ContentPage>
