--- a/samples/Plugin.Maui.Workarounds.MacCatalyst.Sample/MainPage.xaml
+++ b/samples/Plugin.Maui.Workarounds.MacCatalyst.Sample/MainPage.xaml
@@ -5,5 +5,8 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     Title="Mac Catalyst Workarounds">
 
-    <Rectangle BackgroundColor="Red" WidthRequest="1920" HeightRequest="1080" />
+    <Rectangle
+        BackgroundColor="Red"
+        HeightRequest="1080"
+        WidthRequest="1920" />
 </ContentPage>
